test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    env: dev
spec:
  containers:
  - name: nginx
    image: nginx
