virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-petclinic
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - spring-petclinic-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: spring-petclinic.default.svc.cluster.local
        port:
          number: 8080
